--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
       <version>3.12.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+
 
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
@@ -113,18 +119,6 @@
       <version>0.9.1</version>
     </dependency>
 
-
-    <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-swagger2</artifactId>
-      <version>3.0.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-boot-starter</artifactId>
-      <version>3.0.0</version>
-    </dependency>
   </dependencies>
 
   <build>
